--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /pkg/
 /spec/reports/
 /tmp/
+/.rubocop-https---raw-githubusercontent-com-trailblazer-meta-master-rubocop-yml
+/.rakeTasks
+/.tool-versions
