--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
 language: ruby
-before_install:
-  - gem install bundler -v 1.17.3
-matrix:
-  include:
-    - rvm: 2.1.0
-      gemfile: Gemfile
-    - rvm: 2.2.4
-      gemfile: Gemfile
-    - rvm: 2.3.3
-      gemfile: Gemfile
-    - rvm: 2.4.0
-      gemfile: Gemfile
-    - rvm: 2.5.0
-      gemfile: Gemfile
-      script: bundle exec rake test
+rvm:
+  #- ruby-head
+  - 2.6.2
+  - 2.5.1
+  - 2.4.4
+  - 2.3.7
+  - 2.2.10
+
+sudo: false
+cache: bundler
