--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: ruby
-rvm:
-  #- ruby-head
-  - 2.6.2
-  - 2.5.1
-  - 2.4.4
-
+before_install: gem install bundler
 cache: bundler
+rvm:
+  - ruby-head
+  - 2.7
+  - 2.6
+  - 2.5
+  - 2.4
+jobs:
+  allow_failures:
+    - rvm: ruby-head
